--- a/titan/Makefile.am
+++ b/titan/Makefile.am
@@ -1,17 +1,8 @@
-ALL_CFLAGS= -DSH4 -Deplayer3 -DDVDPLAYER -Os -export-dynamic -Wall -Wno-unused-but-set-variable
-
-INCLUDES = \
-	-I../../../../tufsbox/cdkroot/usr/include \
-	-I../../../../tufsbox/cdkroot/usr/include/freetype2 \
-	-I../../../driver/bpamem \
-	-I../../../apps/titan/libdreamdvd \
-	-I../../../apps/misc/tools/libeplayer3/include \
-	-I../../../apps/misc/tools/libmmeimage \
-	-I../../../apps/titan/titan
+ALL_CFLAGS= -DMIPSEL -DCAMSUPP -DEPLAYER4 -Os -export-dynamic -Wall -Wno-unused-but-set-variable
 
 bin_PROGRAMS = titan
 
 titan_SOURCES =	titan.c
 
-titan_LDADD = -lpthread -ldl -lpng -lfreetype -leplayer3 -ldreamdvd -ljpeg -lmmeimage -lmme_host
+titan_LDADD = -lpthread -ldl -lpng -lfreetype -lgstreamer-0.10 -ldreamdvd -ljpeg
 titan_CFLAGS = $(ALL_CFLAGS)
